tests/NormalTests/paczka1/fuzzy1/92414469.err
Error in line 5: YG89z S78 2,2
Error in line 14: 7QqihfoJA S317 10,5
Error in line 16: 7QqihfoJA S784 78,8
Error in line 20: YG89z S784 3,4
Error in line 25: dqDdC2S A249 35,7
Error in line 24: YG89z S317 43,2
